# uv-django

./: LICENSE  README.md  hello.py  pyproject.toml
backend/: .env  requirements.txt  utility.py
backend/boards/: urls.py  views.py
backend/core/: ninja_api.py  schemas.py  settings.py  urls.py  wsgi.py
backend/myuser/: models.py  schemas.py  serializers.py  urls.py  views.py
backend/myuser/migrations/: 0001_initial.py  0002_alter_myuser_last_login.py  0003_alter_myuser_email_alter_myuser_username.py
